--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-time-picker": "^7.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "dayjs": "^1.10.4"
   },
   "scripts": {
     "start": "react-scripts start",
