--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.13",
     "elasticsearch": "^16.7.3",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
@@ -24,8 +25,7 @@
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-time-picker": "^7.0.0",
-    "web-vitals": "^2.1.4",
-    "dayjs": "^1.10.4" 
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
