--- a/app.yaml
+++ b/app.yaml
@@ -1,6 +1,6 @@
-runtime: nodejs18
+runtime: nodejs
 handlers:
-  - url: /
+  - url: /.*
     static_files: build/index.html
     upload: build/index.html
   - url: /(.*)
